--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   ],
   "type": "commonjs",
   "scripts": {
-    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:zig",
+    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:zig,build:wasm",
     "all:clean": "bun clean && pnpm i && bun allz",
     "all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
-    "allz": "npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig",
-    "build": "nx run-many --targets=build:dist,build:app,build:types,build:zig",
+    "allz": "npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig,build:wasm",
+    "build": "nx run-many --targets=build:dist,build:app,build:types,build:zig,build:wasm",
     "build:app": "nx run-many --target=build:app",
     "build:dist": "nx run-many --target=build:dist",
     "build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
     "build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
     "build:types": "nx run-many --targets=build:types,typecheck",
     "build:zig": "cd src && zig build",
+    "build:wasm": "cd src && zig build wasm && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh ../dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath ../dist/zigevm.wasm)\"",
     "test:zig": "cd src && zig build test",
     "clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
     "e2e": "nx e2e e2e",
