🙈 chore: init zig (#1653)
## Description

Added Zig language support to the project by:

- Integrating Zig 0.14.0 into the GitHub Actions workflow
- Creating a basic Zig project structure with `build.zig` configuration
- Setting up WebAssembly compilation target
- Adding initial source files with a simple "Hello world" implementation
- Configuring NX build system to handle Zig builds and tests
- Updating `.gitignore` for Zig-specific build artifacts

## Testing

- Added Zig test step to the test coverage workflow
- Configured NX caching for Zig builds and tests
- Set up GitHub Actions to build Zig code as part of CI pipeline

## Additional Information

- [ ] I read the [contributing docs](../docs/contributing.md) (if this
is your first contribution)

Your ENS/address:

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Added initial Zig language support with native and WebAssembly build
targets.
- Introduced a simple Zig program that prints "Hello world" and a
minimal EVM module.
- Integrated Zig build and test processes into workspace configuration
and automation scripts.

- **Chores**
- Updated workflows and GitHub Actions to install Zig and run Zig builds
in CI.
- Extended .gitignore to exclude Zig build artifacts and a
project-specific file.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   ],
   "type": "commonjs",
   "scripts": {
-    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust",
+    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:zig,build:wasm",
     "all:clean": "bun clean && pnpm i && bun allz",
     "all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
-    "allz": "npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib",
-    "build": "nx run-many --targets=build:dist,build:app,build:types",
+    "allz": "npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig,build:wasm",
+    "build": "nx run-many --targets=build:dist,build:app,build:types,build:zig,build:wasm",
     "build:app": "nx run-many --target=build:app",
     "build:dist": "nx run-many --target=build:dist",
     "build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
     "build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
     "build:types": "nx run-many --targets=build:types,typecheck",
+    "build:zig": "cd src && zig build",
+    "build:wasm": "cd src && zig build wasm && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh ../dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath ../dist/zigevm.wasm)\"",
+    "test:zig": "cd src && zig build test",
     "clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
     "e2e": "nx e2e e2e",
     "find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
@@ -41,7 +44,7 @@
     "sort-package-json": "sort-package-json package.json apps/*/package.json bundler-packages/*/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json tevm/package.json",
     "sort-package-json:check": "sort-package-json package.json docs/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json && git diff --exit-code tevm/package.json",
     "test": "bun test:run",
-    "test:coverage": "nx run-many --target=test:coverage --skip-nx-cache",
+    "test:coverage": "nx run-many --target=test:coverage --skip-nx-cache && bun test:zig",
     "test:run": "nx run-many --target=test:run",
     "up": "bun x npm-check-updates -ui -ws"
   },
