--- a/src/package.json
+++ b/src/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "viem": "^2.29.2",
     "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "effect": "^3.14.22",
+    "ox": "^0.7.0"
   }
 }
