init: mud react example (stash)

--- a/examples/mud/packages/client/package.json
+++ b/examples/mud/packages/client/package.json
@@ -11,17 +11,17 @@
     "test": "tsc --noEmit"
   },
   "dependencies": {
-    "@tevm/mud": "link:../../bundler-packages/mud",
     "@latticexyz/common": "2.2.21",
     "@latticexyz/entrykit": "2.2.21",
     "@latticexyz/explorer": "2.2.21",
     "@latticexyz/react": "2.2.21",
-    "@latticexyz/recs": "2.2.21",
     "@latticexyz/schema-type": "2.2.21",
+    "@latticexyz/stash": "2.2.21",
     "@latticexyz/store-sync": "2.2.21",
     "@latticexyz/utils": "2.2.21",
     "@latticexyz/world": "2.2.21",
     "@tanstack/react-query": "^5.63.0",
+    "@tevm/mud": "link:../../bundler-packages/mud",
     "contracts": "workspace:*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
