--- a/examples/mud/packages/client/package.json
+++ b/examples/mud/packages/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@latticexyz/common": "2.2.21",
+    "@latticexyz/config": "^2.2.21",
     "@latticexyz/entrykit": "2.2.21",
     "@latticexyz/explorer": "2.2.21",
     "@latticexyz/react": "2.2.21",
@@ -23,14 +24,16 @@
     "@tanstack/react-query": "^5.63.0",
     "@tevm/mud": "link:../../bundler-packages/mud",
     "contracts": "workspace:*",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "5.0.0",
     "tailwind-merge": "^2.6.0",
-    "viem": "2.23.2",
+    "viem": "2.29.2",
     "wagmi": "2.12.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@vitejs/plugin-react": "^4.3.4",
