feat: Init tevm app

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - apps/*
+  - app
   - bundler-packages/*
   - bundler-packages/resolutions-rs/npm/*
   - bundler-packages/runtime-rs/npm/*
