--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 	'bundler-packages/runtime-rs',
 	'bundler-packages/solc-rs',
 	'bundler-packages/bundler-rs',
+	'app/src-tauri',
 ]
 
 [profile.release]
