--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.15.18",
     "autoprefixer": "^10.4.21",
