wip: integration plan

--- a/bundler-packages/mud/package.json
+++ b/bundler-packages/mud/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@latticexyz/config": "^2.2.21",
+    "@latticexyz/protocol-parser": "^2.2.21",
     "@latticexyz/stash": "^2.2.21",
     "@latticexyz/store": "^2.2.21",
     "@latticexyz/store-sync": "^2.2.21",
