--- a/bundler-packages/mud/tsconfig.json
+++ b/bundler-packages/mud/tsconfig.json
@@ -4,7 +4,8 @@
 		"outDir": "types",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"jsx": "react-jsx"
 	},
 	"include": ["src", "src/**/*.json", "package.json"]
 }
