--- a/examples/mud/packages/client/tsconfig.json
+++ b/examples/mud/packages/client/tsconfig.json
@@ -8,6 +8,7 @@
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
+      "@tevm/mud/react": ["../../../../bundler-packages/mud/src/react/index.ts"],
       "@tevm/mud": ["../../../../bundler-packages/mud/src/index.ts"]
     }
   },
