--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
 	'bundler-packages/solc-rs',
 	'bundler-packages/bundler-rs',
 	'app/src-tauri',
+	'src/Compilers',
 ]
 
 [profile.release]
