--- a/.github/workflows/nx.yml
+++ b/.github/workflows/nx.yml
@@ -80,8 +80,9 @@ jobs:
       - name: Initialize the Nx Cloud distributed CI run and stop agents when the build tasks are done
         run: bunx nx-cloud start-ci-run --stop-agents-after=build:app --stop-agents-on-failure=false
 
-      - name: Build Zig and WASM
+      - name: Build Rust Zig and WASM
         run: |
+          cargo build &&
           zig build &&
           zig build wasm && echo "WASM size: $(ls -lh ./dist/zigevm.wasm | awk '{print $5}')"
 
