refactor: tx status subscriptions

--- a/examples/mud/packages/client/package.json
+++ b/examples/mud/packages/client/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "5.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "viem": "2.29.2",
     "wagmi": "2.12.11"
