--- a/bundler-packages/whatsabi/tsconfig.json
+++ b/bundler-packages/whatsabi/tsconfig.json
@@ -4,7 +4,8 @@
 		"outDir": "types",
 		"skipLibCheck": true,
 		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"lib": ["esnext", "dom"]
 	},
 	"include": ["src", "src/**/*.json", "package.json"]
 }
