--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -68,6 +68,7 @@
     "@tevm/common": "workspace:^",
     "@tevm/errors": "workspace:^",
     "@tevm/logger": "workspace:^",
+    "@tevm/rlp": "workspace:^",
     "@tevm/test-utils": "workspace:^",
     "@tevm/utils": "workspace:^",
     "ethereum-cryptography": "^3.2.0"
