--- a/bundler-packages/mud/package.json
+++ b/bundler-packages/mud/package.json
@@ -88,13 +88,14 @@
   },
   "devDependencies": {
     "@tevm/config": "workspace:^",
+    "@tevm/test-utils": "workspace:^",
     "@tevm/tsconfig": "workspace:^",
     "@tevm/tsupconfig": "workspace:^",
     "@types/react": "^18.2.0"
   },
   "peerDependencies": {
-    "viem": "^2.23.10",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "viem": "^2.23.10"
   },
   "peerDependenciesMeta": {
     "react": {
