--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -38,4 +38,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Build app
-        run: bunx nx affected --target build:app
+        run: bunx nx run-many --target build:app
