--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -38,4 +38,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Generate docs
-        run: bunx nx affected --target generate:docs
+        run: bunx nx run-many --target generate:docs
