--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -38,4 +38,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Lint check and sort package json
-        run: bunx nx affected --target lint:check && bun sort-package-json:check
+        run: bunx nx run-many --target lint:check && bun sort-package-json:check
