--- a/.github/workflows/lint-deps.yml
+++ b/.github/workflows/lint-deps.yml
@@ -38,4 +38,4 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Lint dependencies
-        run: bunx nx run-many --target lint:deps
+        run: pnpm -r run lint:deps
