--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -44,6 +44,13 @@ runs:
     - name: Derive appropriate SHAs for base and head for `nx affected` commands
       uses: nrwl/nx-set-shas@v4
 
+    - name: Echo nx shas
+      run: |
+        echo "nx using following shas:"
+        echo "BASE: ${{ env.NX_BASE }}"
+        echo "HEAD: ${{ env.NX_HEAD }}"
+      shell: bash
+
     - name: Install native dependencies
       shell: bash
       run: |
