refactor: better organization & logs

--- a/bundler-packages/mud/package.json
+++ b/bundler-packages/mud/package.json
@@ -79,6 +79,7 @@
     "@latticexyz/store-sync": "^2.2.21",
     "@tevm/actions": "workspace:^",
     "@tevm/common": "workspace:^",
+    "@tevm/logger": "workspace:^",
     "@tevm/memory-client": "workspace:^",
     "@tevm/txpool": "workspace:^",
     "@tevm/utils": "workspace:^",
