--- a/package.json
+++ b/package.json
@@ -12,40 +12,39 @@
   ],
   "type": "commonjs",
   "scripts": {
-    "all": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,build:rust,build:wasm",
+    "all": "pnpm -r build:dist && pnpm -r build:types && pnpm -r test:coverage && pnpm -r dev:run && pnpm -r test:rust && pnpm -r typecheck && pnpm -r lint:check && pnpm -r lint:deps && pnpm -r lint:package && pnpm -r build:app && pnpm -r generate:docs && pnpm -r build:rust && pnpm -r build:wasm",
     "all:clean": "bun clean && pnpm i && bun allz",
-    "all:slow": "nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app --parallel=1",
     "all:zig": "zig build && zig build test-server",
-    "allz": "bun all:zig && npx concurrently 'pnpm i' 'bun lint' 'bun sort-package-json' && nx run-many --targets=generate:docs,build:types,typecheck,test:coverage,build:dist,dev:run,build:app,lint:package,lint:deps,lint,format,build:rust:lib,build:zig,build:wasm",
-    "build": "nx run-many --targets=build:dist,build:app,build:types,build:zig,build:wasm",
-    "build:app": "nx run-many --target=build:app",
-    "build:dist": "nx run-many --target=build:dist",
-    "build:rust:app": "nx run-many --target=build --projects=my_rust_node_lib --configuration=production",
-    "build:rust:lib": "nx run-many --target=build --projects=my_rust_node_lib",
-    "build:types": "nx run-many --targets=build:types,typecheck",
+    "allz": "pnpm i && bun lint && bun sort-package-json && bun all",
+    "build": "pnpm -r build:dist && pnpm -r build:app && pnpm -r build:types && pnpm -r build:zig && pnpm -r build:wasm",
+    "build:app": "pnpm -r build:app",
+    "build:dist": "pnpm -r build:dist",
+    "build:rust:app": "pnpm -r build --filter=my_rust_node_lib",
+    "build:rust:lib": "pnpm -r build --filter=my_rust_node_lib",
+    "build:types": "pnpm -r build:types && pnpm -r typecheck",
     "build:wasm": "zig build wasm && mkdir -p ../dist && find ../.zig-cache -name \"*.wasm\" -exec cp {} ../dist/zigevm.wasm \\; && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh ../dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath ../dist/zigevm.wasm)\"",
     "build:zig": "zig build",
-    "clean": "nx reset && nx run-many --target=clean && rm -rf node_modules && rm -rf .nx",
-    "e2e": "nx e2e e2e",
+    "clean": "pnpm -r clean && rm -rf node_modules && rm -rf .nx",
+    "e2e": "pnpm -r e2e --filter=e2e",
     "find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
     "format:check": "biome format .",
-    "generate:docs": "nx run-many --target=generate:docs",
+    "generate:docs": "pnpm -r generate:docs",
     "jsdoc:add": "node scripts/jsdoc-helper/add-jsdoc.js",
     "jsdoc:batch": "node scripts/jsdoc-helper/batch-add-jsdoc.js",
     "lint": "biome check . --write --unsafe && biome format . --write",
     "lint:check": "biome check .",
-    "lint:deps": "bunx depcheck && nx run-many --target=lint:deps",
-    "lint:package": "nx run-many --target=lint:package",
+    "lint:deps": "bunx depcheck && pnpm -r lint:deps",
+    "lint:package": "pnpm -r lint:package",
     "release:check": "changeset status --verbose --since=origin/main",
-    "release:publish": "pnpm install && nx run-many --target=build:app,build:dist,build:types --skip-nx-cache && cd bundler-packages/resolutions-rs && bun run build:release && cd ../../ && changeset publish",
+    "release:publish": "pnpm install && pnpm -r build:app && pnpm -r build:dist && pnpm -r build:types && cd bundler-packages/resolutions-rs && bun run build:release && cd ../../ && changeset publish",
     "release:publish:jsr": "cd tevm && pnpm publish:jsr",
     "release:publish:jsr:dry-run": "cd tevm && pnpm publish:jsr:dry",
     "release:version": "changeset version && pnpm install --lockfile-only",
     "sort-package-json": "sort-package-json package.json apps/*/package.json bundler-packages/*/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json tevm/package.json",
     "sort-package-json:check": "sort-package-json package.json docs/package.json configs/*/package.json examples/*/package.json experimental/*/package.json extensions/*/package.json packages/*/package.json && git diff --exit-code tevm/package.json",
     "test": "bun test:run",
-    "test:coverage": "nx run-many --target=test:coverage --skip-nx-cache && bun test:zig",
-    "test:run": "nx run-many --target=test:run",
+    "test:coverage": "pnpm -r test:coverage && bun test:zig",
+    "test:run": "pnpm -r test:run",
     "test:zig": "cd src && zig build test",
     "up": "bun x npm-check-updates -ui -ws"
   },
