--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ env:
   TEVM_RPC_URLS_OPTIMISM: ${{ secrets.TEVM_RPC_URLS_OPTIMISM }}
 
 jobs:
-  cichecks:
+  ci-checks:
     name: CI Checks
     runs-on: ubuntu-latest
     steps:
@@ -30,43 +30,69 @@ jobs:
           fetch-depth: 0
 
       - name: "Setup"
+        id: setup
         uses: ./.github/actions/setup
 
       - name: Build dist
+        id: build-dist
         run: pnpm -r build:dist
 
       - name: Build types
+        if: success()
+        continue-on-error: true
         run: pnpm -r build:types
 
       - name: Tests
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r test:coverage
 
       - name: Fixtures
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r dev:run
 
       - name: Tests Rust
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r test:rust
 
       - name: Typecheck
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r typecheck
 
       - name: Lint
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r lint:check
 
       - name: Lint deps
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r lint:deps
 
       - name: Lint packages
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r lint:package
 
       - name: Build app
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r build:app
 
       - name: Generate docs
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r generate:docs
 
       - name: Build rust
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
         run: pnpm -r build:rust
 
       - name: Build wasm
-        run: pnpm -r build:asm
+        if: always() && steps.setup.conclusion == 'success' && steps.build-dist.conclusion == 'success'
+        continue-on-error: true
+        run: pnpm -r build:wasm
