--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,6 +7,8 @@
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": [
+    "@tevm/zig",
+    "app",
     "@tevm/example*",
     "@tevm/node-docs",
     "svelte-ethers",
