feat: Add zig native app support (#1749)
## Description

_Concise description of proposed changes_

## Testing

Explain the quality checks that have been done on the code changes

## Additional Information

- [ ] I read the [contributing docs](../docs/contributing.md) (if this
is your first contribution)

Your ENS/address:

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,4 @@
 packages:
-  - app
   - bundler-packages/*
   - bundler-packages/resolutions-rs/npm/*
   - bundler-packages/runtime-rs/npm/*
@@ -13,6 +12,7 @@ packages:
   - packages/*
   - scripts
   - src
+  - src/ui
   - tevm
   - test/*
 onlyBuiltDependencies:
