--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -8,8 +8,7 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "tauri": "tauri"
+    "serve": "vite preview"
   },
   "license": "MIT",
   "dependencies": {
@@ -18,7 +17,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
-    "@tauri-apps/cli": "^2.5.0",
     "@types/node": "^22.15.21",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
