--- a/bundler-packages/mud/package.json
+++ b/bundler-packages/mud/package.json
@@ -17,7 +17,8 @@
   },
   "license": "MIT",
   "contributors": [
-    "Will Cory <willcory10@gmail.com>"
+    "Will Cory <willcory10@gmail.com>",
+    "polarzero <0xpolarzero@gmail.com>"
   ],
   "sideEffects": false,
   "type": "module",
@@ -53,11 +54,11 @@
     "src"
   ],
   "scripts": {
-    "//lint:package": "bunx publint --strict && attw --pack",
-    "//test": "vitest --coverage",
-    "//test:coverage": "vitest run --coverage",
-    "//test:run": "vitest run",
-    "//test:ui": "vitest --ui",
+    "lint:package": "bunx publint --strict && attw --pack",
+    "test": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
     "all": "pnpm i  && bun run build && bun run lint && bun run lint:check && bun run format:check && bun run format && bun run test:coverage && bun run generate:docs",
     "build": "nx run-many --targets=build:dist,build:types --projects=@tevm/mud",
     "build:dist": "tsup",
@@ -83,7 +84,6 @@
     "@tevm/memory-client": "workspace:^",
     "@tevm/txpool": "workspace:^",
     "@tevm/utils": "workspace:^",
-    "@tevm/vm": "workspace:^",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.23.10"
