--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:wasm": "zig build wasm && echo \"WASM build completed\" && echo \"WASM size: $(ls -lh zig-out/dist/zigevm.wasm | awk '{print $5}')\" && echo \"WASM path: $(realpath zig-out/dist/zigevm.wasm)\"",
     "build:zig": "zig build",
     "clean": "pnpm -r clean && rm -rf node_modules && rm -rf .nx",
+    "deploy:zig-docs": "bun run scripts/deploy-zig-docs.js",
     "e2e": "pnpm -r e2e --filter=e2e",
     "find-missing-jsdoc": "node scripts/jsdoc-helper/find-missing-jsdoc.js",
     "format:check": "biome format .",
