--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,8 @@ TODO.md
 
 **/.claude/settings.local.json
 
+execution-specs/
+
 g/
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
